src/test/deca/syntax/invalid/created/Objet/instanceof_null.des
mismatched input 'null' expecting IDENT